css changes to font size and overlap issues

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 #question-btn {
   font-family: cursive;
   font-weight: 600;
-  height: 8vh;
+  height: 10vh;
   width: 25vw;
   border-radius: 15em;
   /*background: yellow;*/
@@ -53,7 +53,7 @@ body {
   box-shadow: 0px 5px 5px 1px blue;*/
   cursor: pointer;
   position: absolute;
-  bottom: 12vh;
+  bottom: 5vh;
 }
 
 #question-btn:hover {
@@ -67,12 +67,9 @@ body {
 
 #question-holder {
   display: none;
-  font-size: 1.3em;
+  font-size: 1.2em;
   margin: 5vh;
   width: 80%;
   justify-content: center;
   text-align: center;
-  height: 35vh;
-  position: absolute;
-  top: 30%;
 }
